--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
+.tracker {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.enterFild {
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid gray;
+  width: 40%;
+  border-radius: 20px;
+  padding: 1px 0;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.input-text {
+  width: 90%;
+  padding: 8px 8px 8px 12px;
+  outline: 0;
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input-button {
+  width: 34px;
+  background-image: url("../src/images/play_circle_filled-24px.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: 0;
+  outline: 0;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.createdTrack {
+  padding: 10px 0;
+  width: 40%;
+  margin: 0 auto;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10px;
+}
+
+.createdTrack:hover {
+  color: #3db06c;
+  background-color: #fdfdf6;
+}
+
+.playPause {
+  width: 24px;
+  height: 24px;
+  background-image: url("../src/images/pause_circle_outline-24px.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: 0;
+  outline: 0;
+  background-color: white;
+  border-radius: 50%;
+  justify-self: flex-end;
+}
+
+.delete {
+  width: 24px;
+  height: 24px;
+  background-image: url("../src/images/remove_circle_outline-24px.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: 0;
+  outline: 0;
+  background-color: white;
+  border-radius: 50%;
+  justify-self: flex-end;
+}
+
+.rightBlock {
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+}
+
+.time {
+  margin-right: 20px;
+}
+
+@media(max-width: 900px) {
+  .createdTrack {
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .enterFild {
+    width: 90%;
   }
 }
